--- a/kkapturedll/kkapturedll.vcxproj
+++ b/kkapturedll/kkapturedll.vcxproj
@@ -91,9 +91,9 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <CustomBuildStep>
-      <Command>copy "$(TargetPath)" "$(SolutionDir)kkapture\$(Configuration)\$(TargetFileName)"
-</Command>
-      <Outputs>$(SolutionDir)kkapture\$(Configuration)\$(TargetFileName);%(Outputs)</Outputs>
+      <Command>
+      </Command>
+      <Outputs>%(Outputs)</Outputs>
     </CustomBuildStep>
     <ClCompile>
       <Optimization>Disabled</Optimization>
@@ -125,9 +125,9 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <CustomBuildStep>
-      <Command>copy "$(TargetPath)" "$(SolutionDir)kkapture\$(Configuration)\$(TargetFileName)"
-</Command>
-      <Outputs>$(SolutionDir)kkapture\$(Configuration)\$(TargetFileName);%(Outputs)</Outputs>
+      <Command>
+      </Command>
+      <Outputs>%(Outputs)</Outputs>
     </CustomBuildStep>
     <ClCompile>
       <Optimization>Disabled</Optimization>
@@ -156,9 +156,9 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <CustomBuildStep>
-      <Command>copy "$(TargetPath)" "$(SolutionDir)kkapture\$(Configuration)\$(TargetFileName)"
-</Command>
-      <Outputs>$(SolutionDir)kkapture\$(Configuration)\$(TargetFileName);%(Outputs)</Outputs>
+      <Command>
+      </Command>
+      <Outputs>%(Outputs)</Outputs>
     </CustomBuildStep>
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
