refactor(video/vulkan): load vulkan library entirely dynamically, remove linkage to vulkan-1.lib to be runnable without vulkan-1.dll

--- a/kkapturedll/kkapturedll.vcxproj.filters
+++ b/kkapturedll/kkapturedll.vcxproj.filters
@@ -166,5 +166,11 @@
     <ClInclude Include="mhook.apriorit\mhook-lib\mhook.h">
       <Filter>mhook</Filter>
     </ClInclude>
+    <ClInclude Include="video_vulkan.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="video_vulkan_functions.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
